fix: Error Message Not Showing on Chapters of Media Page

--- a/app/media/[id]/components/MangaChaptersContainer/component.module.css
+++ b/app/media/[id]/components/MangaChaptersContainer/component.module.css
@@ -133,6 +133,38 @@
 
 }
 
+/* NO CHAPTERS */
+#no_chapters_container {
+
+    box-shadow: inset 0px 0px 20px 1px var(--background);
+
+    border-radius: 8px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    min-height: 340px;
+    max-height: 60vh;
+
+    background-color: var(--white-100);
+
+}
+
+#no_chapters_container p {
+
+    font-weight: 500;
+    color: var(--black-100) !important;
+
+}
+
+#no_chapters_container p span {
+
+    color: var(--brand-color) !important;
+
+}
+
 /* PAGINATION BUTTONS */
 #pagination_buttons_container {
 
